@@ -1,3 +1,9 @@
+2009-09-26  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tclooConfig.sh, win/tclooConfig.sh: [Bug 2026844]: Added dummy
+	versions of tclooConfig.sh that make it easier to build extensions
+	against both Tcl8.5+TclOO-standalone and Tcl8.6.
+
 2009-09-24  Don Porter  <dgp@users.sourceforge.net>
 
 	TIP #356 IMPLEMENTATION
